crates/wdl-ast/tests/validation/duplicate-runtime/source.wdl
# This is a test of too many runtime sections in a task.

version 1.1

task t {
    runtime {

    }

    runtime {

    }

    command <<<>>>
}
